@@ -9,9 +9,9 @@ S3method(as.dendrogram,Node)
 S3method(as.list,Node)
 S3method(print,Node)
 export(Aggregate)
+export(Climb)
 export(Clone)
 export(Do)
-export(Find)
 export(FormatFixedDecimal)
 export(FormatPercent)
 export(FromDataFrameTable)
