@@ -1,10 +1,10 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/node_methods.R
-\name{Find}
-\alias{Find}
+\name{Climb}
+\alias{Climb}
 \title{Find a \code{Node} by its path}
 \usage{
-Find(node, ...)
+Climb(node, ...)
 }
 \arguments{
 \item{node}{The root node}
@@ -15,13 +15,13 @@ Find(node, ...)
 the \code{Node} having path \code{...}, or \code{NULL} if such a path does not exist
 }
 \description{
-Find returns the \code{Node} at path \code{...}. The path is relative to the \code{Node} on which this method is called. Each argument provided corresponds to an
+\code{Climb} returns the \code{Node} at path \code{...}. The path is relative to the \code{Node} on which this method is called. Each argument provided corresponds to an
 element in the path, specified by the \code{Node}'s name.
 }
 \examples{
 data(acme)
-acme$Find('IT', 'Outsource')$name
-acme$Find('IT')$Find('Outsource')$name
+acme$Climb('IT', 'Outsource')$name
+acme$CLimb('IT')$Climb('Outsource')$name
 }
 \seealso{
 \code{\link{Node}}
