@@ -24,7 +24,7 @@ library(data.tree)
 data(acme)
 ap <- as.phylo(acme)
 plot(ap)
-nodelabels("IT Dep.", GetPhyloNr(acme$Find("IT")))
-edgelabels("Good!", GetPhyloNr(acme$Find("IT", "Switch to R"), "edge"))
+nodelabels("IT Dep.", GetPhyloNr(acme$Climb("IT")))
+edgelabels("Good!", GetPhyloNr(acme$Climb("IT", "Switch to R"), "edge"))
 }
 
