@@ -54,7 +54,7 @@ acme$isRoot
 acme$depth
 print(acme, "p", "cost")
 
-outsource <- acme$Find("IT", "Outsource")
+outsource <- acme$Climb("IT", "Outsource")
 class(outsource)
 outsource$fields
 outsource$isLeaf
