@@ -2,7 +2,4 @@ context("tree docu method")
 
 
 
-test_that("Find NULL", {
- 
-})
 
