@@ -4,6 +4,7 @@
 
 - Node
   - CHANGE: Node$level is now 1-based (used to be: 0-based), i.e. if Node$isRoot then Node$level = 1
+  - CHANGE: Node$Find is now called Node$Climb
   - ADD: Clone (returning a deep copy)
   - ADD: Prune (pruning the tree)
   - ADD: support for setting formatter functions on a Node
@@ -30,5 +31,5 @@
   - ADD: conversion ToDataFrameTree
   - ADD: conversion ToDataFrameTaxonomy
 - Utils
-  - ADD: Aggregate function: support for functions
+  - ADD: Aggregate function now supports functions
   - CHANGE: Renamed PrintFixedDecimal to FormatFixedDecimal
